--- a/VRChat/97/1298597.html
+++ b/VRChat/97/1298597.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "JEWJiz6EmIAqDQk6BpMRxkSRCoB6JOBC8OxRw0OTT+A="></script>
+    "0zgtIvb2E3jZXvbWg4LULC1WQOibj7CGx5ATWdmrjrQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChatワールド用】水銀ミラー","description":"VRChatワールド用 水銀ミラー\n\n使用例\nhttps://twitter.com/onotchi_/status/1118566999477477377\n\n■ 使い方\n\nVRChatワールドのプロジェクトにインポートして使用してください。\nPrefabsフォルダ内にMercuryMirror.prefabがありますのでこれをワールドに配置できます。\n\n■ 仕様\n\n・触れると水銀のように波打つミラーです。\n\n・通常のミラーと比べて負荷が高いので、ワールドに設置する際にはスイッチなどでON/OFF切り替えできるようにすることを推奨します。\n\n■ 利用規約\n\n・本データの解析、改造、再配布、販売を許可します。\n\n・本データをVRChatワールドに配置してアップロードし、VRChatサービス内で使用することを許可します。\n\n・本データをVRChatサービス内で利用している画像、映像の録画、放送を許可します。\n\n・本データの著作権はスズキコジロウに帰属します。\n\n■ 変更履歴\n\n2019/04/01 公開\n","url":"https://booth.pm/ja/items/1298597","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1600"},"image":"https://booth.pximg.net/c/620x620/e553a78a-fc9b-4cf4-a64b-d8291d1ffd82/i/1298597/26a621f4-643a-440b-9397-c2ff8ccd2008_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JEWJiz6EmIAqDQk6BpMRxkSRCoB6JOBC8OxRw0OTT+A="></script>
+    nonce="0zgtIvb2E3jZXvbWg4LULC1WQOibj7CGx5ATWdmrjrQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,10 +186,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1298597/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              611
+                              612
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1298597/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              611
+                              612
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
