--- a/VRChat/23/1298423.html
+++ b/VRChat/23/1298423.html
@@ -101,9 +101,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "dCmJ91IIrhsaXNRt1dGMYDT+KWS53K+gZ3DiwS1NyQM="></script>
+    "5DCit/Sm6a4ipYIB7YMuYTN+ngT9I7L+S4CNNIRpe1Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料配布】大吟醸　令和　[平成31年４月製造品・令和元年５月製造品]","description":"今大人気の大吟醸「令和」入荷いたしました。平成最後から令和最初にかけたこの時期しか出回らない幻のお酒です。\n※お酒は二十歳になってから\n\n以下諸元\nunitypackageにて配布。\nVRCやバーチャルキャストにぴったり。\n1024pxテクスチャ2枚・マテリアル2個同梱\nテクスチャ1枚・マテリアル1個/瓶","url":"https://booth.pm/ja/items/1298423","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/f1fd444c-dd72-4d59-ba0e-143844ef63a9/i/1298423/bab2371c-10b4-4bbf-a04b-14e9d6921812_base_resized.jpg"}
     </script>
@@ -114,7 +114,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dCmJ91IIrhsaXNRt1dGMYDT+KWS53K+gZ3DiwS1NyQM="></script>
+    nonce="5DCit/Sm6a4ipYIB7YMuYTN+ngT9I7L+S4CNNIRpe1Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -138,6 +138,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -182,7 +184,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1298423/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               373
@@ -197,14 +199,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1298423/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               373
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
