--- a/VRChat/79/1298179.html
+++ b/VRChat/79/1298179.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "D1mK2//Qtqifo/xvbEcjAPKHIPrwJMCjdRVqErNDsZc="></script>
+    "VO4OWNQ+k65A0mRY6ba4QL//E+j3fXpn6ucb/mFoRJY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[生産終了][Discontinued] ラフタリア (Raphtalia) - (VRChat 3D) (Rising of the Shield Hero)","description":"This is Young Raphtalia (ラフタリア) From Rising of the Shield Hero (盾の勇者の成り上がり Tate no Yūsha no Nariagari)\n\nI spend around two or so months working on this and it's finally in a state in which I am happy to say can be sold, I hope you all enjoy!\n\n\nShout-out to UMR/CodeAldnoah for helping with the texture work! ","url":"https://booth.pm/ja/items/1298179","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2200"},"image":"https://booth.pximg.net/c/620x620/d699f819-1a43-4553-8ab4-b5591249ded8/i/1298179/c67ddce8-4c8a-415d-a1b8-4241f88b133b_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="D1mK2//Qtqifo/xvbEcjAPKHIPrwJMCjdRVqErNDsZc="></script>
+    nonce="VO4OWNQ+k65A0mRY6ba4QL//E+j3fXpn6ucb/mFoRJY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1298179/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               117
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1298179/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               117
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
