--- a/VRChat/77/1297377.html
+++ b/VRChat/77/1297377.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "QVTZCmC6YIU2ElctqN1WMRTRIxyabX2x8dsRz8CAINM="></script>
+    "d1KbvL6ayvinygoDJNxDRBWlMBNCejv4Rc3fesfPbO4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】火を吐く赤ん坊","description":"△10438ポリゴン！Good!\n炎を吐く赤ちゃん。\n赤ちゃん集会はこれで出ました。\n一応Humanoid形式ですが実質Genericモデル、火はロックンロールで出ます\n\nUnlit_WF設定、同梱あり\n\n禁止事項\n・当ファイル作者が不利益を被るような当ファイルの全部もしくは一部の再配布\n\nご質問等ありましたら下記URLからどうぞ\nhttps://twitter.com/5old_of_the_Sun","url":"https://booth.pm/ja/items/1297377","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/679000b4-9c75-45d2-9701-013391f87abc/i/1297377/204ec385-7fba-4dcd-90d3-30a1fea3d2de_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QVTZCmC6YIU2ElctqN1WMRTRIxyabX2x8dsRz8CAINM="></script>
+    nonce="d1KbvL6ayvinygoDJNxDRBWlMBNCejv4Rc3fesfPbO4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1297377/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               54
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1297377/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               54
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
