--- a/VRChat/46/1295846.html
+++ b/VRChat/46/1295846.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kNbv9G9xOCxBv+dzR7f1eNQLBuObcNnHTx61+QoGXsY="></script>
+    "TNDWmEtaRXSKS+PS/eL6D1xniHc/tRmna0hwYxh7+mM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】プラン / プラン Lite 【セット】","description":"明るく元気な女の子｢プラン｣です。プランたんと呼んであげると喜びます。\n\n◆ [2022/5/5] VRChat SDK3.0, Physics Bone対応しました\n\n● 本ページでは，通常版(PC版)とLite版(Quest向け軽量版)の｢セット販売｣を行っています．\nLite版のみは別ページ( https://sporadic-e.booth.pm/items/1445662 )にて行っています．併せて参考にしてください．\n\n● VRChatでのアバターとしての利用を想定しており、以下のワールドで試着が可能です。\nhttps://vrchat.com/home/world/wrld_58e23f4d-d23c-4839-a367-6c746ca473be\n\n● また，サポートや質問用のDiscordを設けているので，参加していただけると幸いです．更新連絡もスムーズになる他， WIPなプロジェクトの進捗を見ることができます． \nhttps://discord.gg/ShwP4Mj","url":"https://booth.pm/ja/items/1295846","offers":{"priceCurrency":"JPY","@type":"Offer","price":"4500"},"image":"https://booth.pximg.net/c/620x620/81541f91-c514-450c-b882-988fe98aaa68/i/1295846/b3ab23c1-99f6-4be5-b334-cebd6e59a36c_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kNbv9G9xOCxBv+dzR7f1eNQLBuObcNnHTx61+QoGXsY="></script>
+    nonce="TNDWmEtaRXSKS+PS/eL6D1xniHc/tRmna0hwYxh7+mM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,10 +177,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1295846/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              484
+                              485
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1295846/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              484
+                              485
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
